--- a/dp2-frontend/src/features/Modulo3/components/Charts/Piechart/PieChart.css
+++ b/dp2-frontend/src/features/Modulo3/components/Charts/Piechart/PieChart.css
@@ -1,4 +1,9 @@
 .container-Pie{
-    height: 400px;
-    width: 400px;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    border-radius: 4px;
+    font-size: 16px;
+    padding: 30px;
+    max-height: 774px;
 }
