--- a/dp2-frontend/src/features/Modulo1/pages/Training/training.css
+++ b/dp2-frontend/src/features/Modulo1/pages/Training/training.css
@@ -4,6 +4,35 @@
     grid-gap: 10px;
 }
 
+.row-center{
+    display: flex;
+    align-items: center;
+}
+
+.subarea{
+    font-size: 24px;
+    font-weight: bold;
+}
+
 .prueba{
     background-color: #000000;
+}
+
+.controls{
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+}
+
+.controls:hover {
+    cursor: pointer;
+}
+
+.controlsD {
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    opacity: 50%;
 }
