--- a/dp2-frontend/src/features/Modulo3/components/Comparator/Comparator.css
+++ b/dp2-frontend/src/features/Modulo3/components/Comparator/Comparator.css
@@ -11,7 +11,7 @@
   
   .comparator-headerLine{
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-    padding-bottom: 70px;
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,12 +41,12 @@
   }
   
   .comparator-title{
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 500;
   }
   
   .comparator-subtitle{
-    font-size: 18px;
+    font-size: 16px;
     opacity: 0.5;
   }
   
@@ -64,27 +64,42 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .comparator-row-2{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 26.2px;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 16px;
+  }
   
   .comparator-icon{
     font-size: 20px;
     /*margin-right: 20px; */
   }
   
-  .comparator-text{
-    font-size: 18px;
-    flex: 1;
-    margin-right: 20px;
-  }
-  
   .comparator-aditional{
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     padding: 4px 8px;
     border-radius: 4px;
     overflow: hidden;
     width: fit-content;
     margin-top: 20px;
+  }
+
+  .comparator-matchRate{
+    color: black;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 4px 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    width: fit-content;
+    margin-top: 151px;
   }
   
   .comparator-badge{
@@ -94,29 +109,4 @@
     margin-right: 10px;
     border-radius: 4px;
     color: white;
-  }
-  
-  .comparator-promotion{
-    display: flex;
-    flex-direction: row;
-    font-size: 18px;
-  }
-  
-  .comparator-promotionIcon{
-    margin-right: 4px;
-    justify-content: center;
-  }
-  
-  .comparator-promotionPositions{
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .comparator-promtionText{
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .comparator-promtionIndicator{
-    width: 28px;
   }
