--- a/dp2-frontend/src/features/Modulo1/components/BasicCard/BasicCard.css
+++ b/dp2-frontend/src/features/Modulo1/components/BasicCard/BasicCard.css
@@ -2,6 +2,7 @@
   background-color: white;
   border-radius: 4px;
   overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .basicCard-header{
@@ -73,7 +74,7 @@
 
 .basicCard-aditional{
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   padding: 4px 8px;
   border-radius: 4px;
