--- a/dp2-frontend/src/features/Modulo3/screens/Reportes/IndexEvaluacionContinua.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Reportes/IndexEvaluacionContinua.css
@@ -1,6 +1,8 @@
  .ec-indexFilters{
     display: flex;
     flex-direction: row;
+    align-content: center !important;
+    align-items: center !important;
     width: "100%";
     gap: 16px;
   }
@@ -27,7 +29,7 @@
   .ec-buttonExportar{
     /* width: 167px; */
     margin-top: 20px;
-    /* height: 38px; */
+    height: 38px;
   }
 
   .ec-buttonChangeMode{
@@ -36,3 +38,7 @@
     /* height: 38px; */
   }
 
+.ec-downloadLink{
+  color: white;
+  text-decoration: none;
+}
