linechart y plantillas index

--- a/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
@@ -54,3 +54,18 @@
         }
     }
 }
+
+.pl-indexFilters{
+  display: flex;
+  flex-direction: row;
+}
+
+.pl-indexFilterElement{
+  margin-left: 20px;
+}
+
+.pl-templates{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 20px;
+}
