--- a/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
@@ -69,3 +69,47 @@
   grid-template-columns: repeat(3,1fr);
   grid-gap: 20px;
 }
+
+.boton-subcategorie{
+  border: 1px solid #007bff;
+  width:36px;
+  height:36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-top: 3px;
+  padding-right: 12px;
+}
+
+.input-sub{
+  width: 90%;
+  margin-left: 32px;
+}
+
+.ingreso-sub{
+    display: flex;
+  flex-direction: row;
+}
+.boton-dejar{
+  border: 1px solid #007bff;
+}
+
+.mr-20{
+  margin-right: 20px;
+}
+
+.sub-image{
+  margin-left: 80px;
+  margin-right: 100px;
+}
+
+.dropdown-edit{
+  margin-left: 80px;
+}
+
+.label-estilizado {
+  font-weight: bold;
+  font-size: 18px;
+}
