--- a/dp2-frontend/src/components/Login/Login.css
+++ b/dp2-frontend/src/components/Login/Login.css
@@ -6,3 +6,16 @@
     background: #FFFFFF;
    border-radius: 4px;
 }
+
+.imgMedio{
+    width: 50%;
+    position: absolute;
+    left: 0px;
+    height: 100%;
+}
+
+.text-center{
+    font-size: medium;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
