--- a/dp2-frontend/src/features/Modulo1/pages/LearningPath/Details/learning-path-details.css
+++ b/dp2-frontend/src/features/Modulo1/pages/LearningPath/Details/learning-path-details.css
@@ -4,4 +4,11 @@
 
 .lp-thumb {
     height: 4rem;
+    width: 4rem;
+}
+
+.lpd-footer {
+    background-color: var(--bs-card-bg);
+    border: 0;
+    padding-top: 0;
 }
