--- a/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
@@ -124,3 +124,22 @@
   flex: 1;
   padding-right: 32px;
 }
+.notification {
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  opacity: 1;
+  background-color: #ffffff;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
