Cambios en reportes, falta verificar el axios del reporte

--- a/dp2-frontend/src/features/Modulo3/screens/Reportes/IndexEvaluacionContinua.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Reportes/IndexEvaluacionContinua.css
@@ -29,7 +29,7 @@
   .ec-buttonExportar{
     /* width: 167px; */
     margin-top: 20px;
-    height: 38px;
+    /* height: 38px; */
   }
 
   .ec-buttonChangeMode{
