--- a/dp2-frontend/src/features/Modulo1/pages/Training/training.css
+++ b/dp2-frontend/src/features/Modulo1/pages/Training/training.css
@@ -14,6 +14,11 @@
     font-weight: bold;
 }
 
+.row-search{
+    padding-top: 0.75rem;
+    padding-bottom: 1.5rem;
+}
+
 .prueba{
     background-color: #000000;
 }
