--- a/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
@@ -68,6 +68,8 @@
   display: grid;
   grid-template-columns: repeat(3,1fr);
   grid-gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .boton-subcategorie{
