--- a/dp2-frontend/src/features/Modulo2/Components/JobOpportunityCard/JobOpportunityCard.css
+++ b/dp2-frontend/src/features/Modulo2/Components/JobOpportunityCard/JobOpportunityCard.css
@@ -4,6 +4,11 @@
     border-radius: 4px;
 }
 
+.image-job-opp{
+    border-radius: 12px;
+    width: 80px;
+}
+
 .title-job-opp{
     font-weight: 500;
     font-size: 14px;
