--- a/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
@@ -128,10 +128,11 @@
 }
 .notification {
   position: fixed;
-  top: 50px;
+  top: 6em !important;
   left: 50%;
   transform: translateX(-50%);
   width: 300px;
+  height: 100px;
   opacity: 1;
   background-color: #ffffff;
 }
