se agrega formato para el texto enviado en la oferta laboral

--- a/dp2-frontend/src/features/Modulo4/pages/ConfigOfertaLaboral/configOfertaLaboral.css
+++ b/dp2-frontend/src/features/Modulo4/pages/ConfigOfertaLaboral/configOfertaLaboral.css
@@ -84,3 +84,7 @@ button.small-button {
 .table-bordered td {
     border: 1px solid #dee2e6;
 }
+
+.rich-text-editor {
+    background-color: rgb(164, 39, 39);
+  }
