--- a/dp2-frontend/src/features/Modulo3/components/Charts/Linechart/Linechart.css
+++ b/dp2-frontend/src/features/Modulo3/components/Charts/Linechart/Linechart.css
@@ -1,3 +1,6 @@
 .chart{
     background-color: white;
+    padding: 5px 10px 15px 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: calc(0.5rem - 1px);
 }
