--- a/dp2-frontend/src/features/Modulo2/Components/GestionDeCompetencias/Read.css
+++ b/dp2-frontend/src/features/Modulo2/Components/GestionDeCompetencias/Read.css
@@ -1,10 +1,10 @@
 .pantalla{
-    background-color: #f1f1f1;
-    padding-left: 20px;
+    background-color: #F8f8f9;
+
 }
 
 .titles{
-padding-top: 20px;
+
 }
 
 .basicSearch{
@@ -47,4 +47,13 @@ top: 335px;
     position: absolute;
     left: 290px;
     top: 95px;
+}
+
+.Head{
+    font-size: 48px;
+    font-weight: bold;
+}
+
+.subtitle{
+    opacity: 50%;
 }
