--- a/dp2-frontend/src/features/Modulo2/Components/VisualizacionBrechasTrabajadorRRHH/DetalleCompetenciasArea.css
+++ b/dp2-frontend/src/features/Modulo2/Components/VisualizacionBrechasTrabajadorRRHH/DetalleCompetenciasArea.css
@@ -1,10 +1,10 @@
 .pantalla{
-    background-color: #f1f1f1;
-    padding-left: 20px;
+    background-color: #F8f8f9;
+
 }
 
 .titles{
-padding-top: 20px;
+
 }
 
 .basicSearch{
@@ -23,4 +23,13 @@ padding-top: 20px;
 
 .primera{
     padding-bottom: 20px; 
+}
+
+.Head{
+    font-size: 48px;
+    font-weight: bold !important;
+}
+
+.subtitle{
+    opacity: 50%;
 }
