--- a/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
+++ b/dp2-frontend/src/features/Modulo3/screens/Plantillas/Plantillas.css
@@ -126,6 +126,10 @@
   flex: 1;
   padding-right: 32px;
 }
+.boton-eliminar{
+  align-items: center !important;
+
+}
 .notification {
   position: fixed;
   top: 6em !important;
