--- a/dp2-frontend/src/features/Modulo2/Components/CoursesDemandCompany/SelectDemandCourses.css
+++ b/dp2-frontend/src/features/Modulo2/Components/CoursesDemandCompany/SelectDemandCourses.css
@@ -45,6 +45,7 @@
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     padding-left: 2em;
+    margin-top: 0.5em;
     background-color: #A9F4D0;
 }
 
