--- a/dp2-frontend/src/features/Modulo3/components/Tables/TableHistory.css
+++ b/dp2-frontend/src/features/Modulo3/components/Tables/TableHistory.css
@@ -41,8 +41,8 @@ padding-left: 30px !important;
 width: 50% !important;
 }
 
-.label{
-	padding-right: 200px !important;
+.labelA{
+	padding-right: 65px !important;
 }
 
 .competencia{
