--- a/dp2-frontend/src/features/Modulo2/Components/JobOpportunityCard/JobOpportunityCard.css
+++ b/dp2-frontend/src/features/Modulo2/Components/JobOpportunityCard/JobOpportunityCard.css
@@ -13,6 +13,10 @@
 .title-job-opp{
     font-weight: 500;
     font-size: 16px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .availability-job-opp{
